# crun_rs

./: .gitignore  Cargo.toml  Readme.md  build.ps1  try.c  tst.cpp
.github/workflows/: release.yml
src/: command_exists.rs  compile_helpers.rs  doctor.rs  flags.rs  fmt.rs  fs_and_path_helpers.rs  init_file.rs  main.rs  run_in_terminal.rs  ulog.rs
